// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"Incorrect
Options: "record"

interface Foo {
~~~~~~~~~~~~~~~ A record is preferred over an index signature.
  [key: string]: unknown;
~~~~~~~~~~~~~~~~~~~~~~~~~
}
~

type Foo = {
           ~ A record is preferred over an index signature.
  [key: string]: unknown;
~~~~~~~~~~~~~~~~~~~~~~~~~
};
~
"
`;

exports[` 2`] = `
"Correct
Options: "record"

type Foo = Record<string, unknown>;
"
`;

exports[` 3`] = `
"Incorrect
Options: "index-signature"

type Foo = Record<string, unknown>;
           ~~~~~~~~~~~~~~~~~~~~~~~ An index signature is preferred over a record.
"
`;

exports[` 4`] = `
"Correct
Options: "index-signature"

interface Foo {
  [key: string]: unknown;
}

type Foo = {
  [key: string]: unknown;
};
"
`;
